# chl-xycar-projects

./: .gitignore  CMakeLists.txt  README.md  main.cpp
1st/: xycar_bright_drive.py  xycar_huff_drive.py
1st/process/: control.py  lane_detection.py
1st/src/: subscriber.py
1st/utils/: draw.py
2nd/: subProject_chl.py
2nd/kalman/: kalman.py
2nd/process/: lane_detection.py  process.py
2nd/utils/: draw.py  save.py  trackbar.py
3rd/: CMakeLists.txt  main.cpp  package.xml
3rd/module/include/: warpProcessImage.h
3rd/module/src/: drawLane.cpp  histogram.cpp
module/: CMakeLists.txt
module/include/: drawLane.h  hyperparam.h  polyfit.h
module/src/: hyperparam.cpp  polyfit.cpp  warpProcessImage.cpp
src/: main.cpp
